Fixed compilation warnings, improved performance and added tests